feat: added store type feature
