# models/index.js
@@ -6,6 +6,7 @@ import Category from './Category';
 import City from './City';
 import Item from './Item';
 import Store from './Store';
+import StoreType from './StoreType';
 import TopCategories from './TopCategories';
 import History from './History';
 
@@ -17,6 +18,7 @@ export default {
     City,
     Item,
     Store,
+    StoreType,
     TopCategories,
     History
 };
